Support dotted types in Using; Add more tests

--- a/tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests.fsproj
+++ b/tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests.fsproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="ParserTests.fs" />
     <Compile Include="CodeGeneratorTests.fs" />
+    <Compile Include="IntegratedTests.fs" />
     <None Include="paket.references" />
     <Content Include="App.config" />
   </ItemGroup>
