--- a/src/BrightSword.CSharpExtensions.DiscriminatedUnion/BrightSword.CSharpExtensions.DiscriminatedUnion.fsproj
+++ b/src/BrightSword.CSharpExtensions.DiscriminatedUnion/BrightSword.CSharpExtensions.DiscriminatedUnion.fsproj
@@ -61,6 +61,9 @@
   <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="..\..\paket-files\johnazariah\b155cb600213d2d7971fd224531ebdb9\maybe.fs">
+      <Link>maybe.fs</Link>
+    </Compile>
     <Compile Include="AST.fs" />
     <Compile Include="Parser.fs" />
     <Compile Include="EqualityOperators.fs" />
