--- a/tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests.fsproj
+++ b/tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests.fsproj
@@ -68,6 +68,9 @@
     <Compile Include="IntegratedTests.fs" />
     <None Include="paket.references" />
     <Content Include="App.config" />
+    <None Include="maybe.csunion">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
