--- a/src/CSharp.UnionTypes/CSharp.UnionTypes.fsproj
+++ b/src/CSharp.UnionTypes/CSharp.UnionTypes.fsproj
@@ -26,6 +26,7 @@
     <DocumentationFile>.\bin\$(Configuration)\$(AssemblyName).xml</DocumentationFile>
     <OtherFlags>--warnon:1182</OtherFlags>
     <Prefer32Bit>true</Prefer32Bit>
+    <StartArguments>--input-file="meep"</StartArguments>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
