--- a/src/CSharp.UnionTypes.VSIX/CSharp.UnionTypes.VSIX.csproj
+++ b/src/CSharp.UnionTypes.VSIX/CSharp.UnionTypes.VSIX.csproj
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.props" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools\tools\VsSDK\Microsoft.VsSDK.props')" />
+  <Import Project="..\..\packages\Microsoft.VSSDK.BuildTools\build\Microsoft.VSSDK.BuildTools.props" Condition="Exists('..\..\packages\Microsoft.VSSDK.BuildTools\build\Microsoft.VSSDK.BuildTools.props')" Label="Paket" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <NuGetPackageImportStamp>
