--- a/tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests/App.config
+++ b/tests/BrightSword.CSharpExtensions.DiscriminatedUnion.Tests/App.config
@@ -7,6 +7,11 @@
 <runtime><assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
   <dependentAssembly>
     <Paket>True</Paket>
+    <assemblyIdentity name="BrightSword.RoslynWrapper" publicKeyToken="8cff7a783bfcbc27" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="0.0.0.0" />
+  </dependentAssembly>
+  <dependentAssembly>
+    <Paket>True</Paket>
     <assemblyIdentity name="FParsec" publicKeyToken="40ccfc0a09edbb5d" culture="neutral" />
     <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="1.0.0.0" />
   </dependentAssembly>
