--- a/tests/BrightSword.CSharpExtensions.Reference/BrightSword.CSharpExtensions.Reference.csproj
+++ b/tests/BrightSword.CSharpExtensions.Reference/BrightSword.CSharpExtensions.Reference.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="nunit.framework">
-      <HintPath>..\packages\test\NUnit\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\..\packages\test\NUnit\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
       <Paket>True</Paket>
     </Reference>
