--- a/src/CSharp.UnionTypes.CLI/CSharp.UnionTypes.CLI.fsproj
+++ b/src/CSharp.UnionTypes.CLI/CSharp.UnionTypes.CLI.fsproj
@@ -57,8 +57,8 @@
     <RegisterWithCodebase>true</RegisterWithCodebase>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BrightSword.CSharpExtensions.DiscriminatedUnion\BrightSword.CSharpExtensions.DiscriminatedUnion.fsproj">
-      <Name>BrightSword.CSharpExtensions.DiscriminatedUnion</Name>
+    <ProjectReference Include="..\CSharp.UnionTypes\CSharp.UnionTypes.fsproj">
+      <Name>CSharp.UnionTypes</Name>
       <Project>{badd2e7c-35a6-413b-a4c8-f291a8ffcb94}</Project>
       <Private>True</Private>
     </ProjectReference>
@@ -79,7 +79,7 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
