--- a/src/CSharp.UnionTypes/CSharp.UnionTypes.fsproj
+++ b/src/CSharp.UnionTypes/CSharp.UnionTypes.fsproj
@@ -7,11 +7,11 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>badd2e7c-35a6-413b-a4c8-f291a8ffcb94</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>BrightSword.CSharpExtensions.DiscriminatedUnion</RootNamespace>
-    <AssemblyName>BrightSword.CSharpExtensions.DiscriminatedUnion</AssemblyName>
+    <RootNamespace>CSharp.UnionTypes</RootNamespace>
+    <AssemblyName>CSharp.UnionTypes</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
-    <Name>BrightSword.CSharpExtensions.DiscriminatedUnion</Name>
+    <Name>CSharp.UnionTypes</Name>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
