--- a/tests/CSharp.UnionTypes.Tests/CSharp.UnionTypes.Tests.fsproj
+++ b/tests/CSharp.UnionTypes.Tests/CSharp.UnionTypes.Tests.fsproj
@@ -7,11 +7,11 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>1227f507-f770-483e-8e8b-c90b1e14e316</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>BrightSword.CSharpExtensions.DiscriminatedUnion.Tests</RootNamespace>
-    <AssemblyName>BrightSword.CSharpExtensions.DiscriminatedUnion.Tests</AssemblyName>
+    <RootNamespace>CSharp.UnionTypes.Tests</RootNamespace>
+    <AssemblyName>CSharp.UnionTypes.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
-    <Name>BrightSword.CSharpExtensions.DiscriminatedUnion.Tests</Name>
+    <Name>CSharp.UnionTypes.Tests</Name>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
   </PropertyGroup>
@@ -54,7 +54,7 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
@@ -80,8 +80,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\..\src\BrightSword.CSharpExtensions.DiscriminatedUnion\BrightSword.CSharpExtensions.DiscriminatedUnion.fsproj">
-      <Name>BrightSword.CSharpExtensions.DiscriminatedUnion</Name>
+    <ProjectReference Include="..\..\src\CSharp.UnionTypes\CSharp.UnionTypes.fsproj">
+      <Name>CSharp.UnionTypes</Name>
       <Project>{badd2e7c-35a6-413b-a4c8-f291a8ffcb94}</Project>
       <Private>True</Private>
     </ProjectReference>
