Single File Generator and VSIX (#10)
* Make CLI more friendly

* WIP - SFG not working yet!

* WIP - Second attempt at making the SFG to work! Still failing

* SFG registered; code-gen fails

* fixed up references

* SFG works!

* Fix path (VSSDK) from nuget to paket package

* fix Appveyor build

* Fix Travis Build by referencing VSLangProj80 from Nuget

* Renamed BrightSword.CSharpExtensions to CSharp.UnionTypes

* Use common signing key

* Fix broken csproj to enable generating VSIX correctly

* Add GenerationSite for testing and demonstration purposes

--- a/tests/CSharp.UnionTypes.GenerationSite/CSharp.UnionTypes.GenerationSite.csproj
+++ b/tests/CSharp.UnionTypes.GenerationSite/CSharp.UnionTypes.GenerationSite.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{75FCAE41-6E9E-4E79-B77C-6BD77F71A11A}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{EBE452B1-71E0-42F1-989C-E4FC02ECB188}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BrightSword.CSharpExtensions.Reference</RootNamespace>
-    <AssemblyName>BrightSword.CSharpExtensions.Reference</AssemblyName>
+    <RootNamespace>CSharp.UnionTypes.GenerationSite</RootNamespace>
+    <AssemblyName>CSharp.UnionTypes.GenerationSite</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,12 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MaybeTests.cs" />
-    <Compile Include="Maybe.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="paket.references" />
+    <None Include="App.config" />
+    <None Include="Maybe.csunion">
+      <Generator>CSharpUnionTypeGenerator</Generator>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -55,14 +60,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\test\NUnit\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-      <Paket>True</Paket>
-    </Reference>
-  </ItemGroup>
 </Project>
