Include generated code file into GeneratedSite project

--- a/tests/CSharp.UnionTypes.GenerationSite/CSharp.UnionTypes.GenerationSite.csproj
+++ b/tests/CSharp.UnionTypes.GenerationSite/CSharp.UnionTypes.GenerationSite.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Maybe.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Maybe.csunion</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,6 +55,7 @@
     <None Include="App.config" />
     <None Include="Maybe.csunion">
       <Generator>CSharpUnionTypeGenerator</Generator>
+      <LastGenOutput>Maybe.g.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
