Include lib and executables in Nuget package in the appropriate folders

--- a/src/CSharp.UnionTypes/CSharp.UnionTypes.fsproj
+++ b/src/CSharp.UnionTypes/CSharp.UnionTypes.fsproj
@@ -82,6 +82,7 @@
     <Compile Include="CompilationUnitDeclarationBuilder.fs" />
     <Compile Include="CodeGenerator.fs" />
     <None Include="paket.references" />
+    <None Include="paket.template" />
     <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
