--- a/src/CSharp.AlgebraicTypes/CSharp.AlgebraicTypes.fsproj
+++ b/src/CSharp.AlgebraicTypes/CSharp.AlgebraicTypes.fsproj
@@ -5,37 +5,41 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>1227f507-f770-483e-8e8b-c90b1e14e316</ProjectGuid>
+    <ProjectGuid>badd2e7c-35a6-413b-a4c8-f291a8ffcb94</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>CSharp.UnionTypes.Tests</RootNamespace>
-    <AssemblyName>CSharp.UnionTypes.Tests</AssemblyName>
+    <RootNamespace>CSharp.UnionTypes</RootNamespace>
+    <AssemblyName>CSharp.UnionTypes</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.3.0.0</TargetFSharpCoreVersion>
-    <Name>CSharp.UnionTypes.Tests</Name>
+    <Name>CSharp.AlgebraicTypes</Name>
     <TargetFrameworkProfile />
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>.\bin\Debug</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <WarningLevel>5</WarningLevel>
-    <StartAction>Project</StartAction>
-    <StartProgram>
-    </StartProgram>
-    <StartArguments>
-    </StartArguments>
+    <WarningLevel>3</WarningLevel>
+    <DocumentationFile>.\bin\$(Configuration)\$(AssemblyName).xml</DocumentationFile>
+    <OtherFlags>--warnon:1182</OtherFlags>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>.\bin\Release</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
+    <DocumentationFile>.\bin\$(Configuration)\$(AssemblyName).xml</DocumentationFile>
+    <OtherFlags>--warnon:1182</OtherFlags>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
@@ -52,8 +56,7 @@
       </PropertyGroup>
     </Otherwise>
   </Choose>
-  <Import Project="$(FSharpTargetsPath)" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Import Project="$(FSharpTargetsPath)" Condition="Exists('$(FSharpTargetsPath)')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -63,18 +66,24 @@
   -->
   <Import Project="..\..\.paket\paket.targets" />
   <ItemGroup>
-    <Compile Include="ParserTests.fs" />
-    <Compile Include="SampleTypes.fs" />
-    <Compile Include="UnitTestUtilities.fs" />
-    <Compile Include="UnionTypeClassTests.fs" />
-    <Compile Include="UnionMemberClassTests.fs" />
-    <Compile Include="IntegratedTests.UserName.fs" />
-    <None Include="paket.references" />
-    <Content Include="App.config" />
-    <None Include="maybe.csunion">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="..\..\paket-files\johnazariah\b155cb600213d2d7971fd224531ebdb9\maybe.fs">
+      <Link>maybe.fs</Link>
+    </Compile>
+    <None Include="..\Key.snk">
+      <Link>Key.snk</Link>
     </None>
-    <Compile Include="IntegratedTests.Maybe.fs" />
+    <Compile Include="AST.fs" />
+    <Compile Include="Parser.fs" />
+    <Compile Include="DeclarationBuilderCommon.fs" />
+    <Compile Include="UnionMemberClassDeclarationBuilder.fs" />
+    <Compile Include="UnionTypeClassDeclarationBuilder.fs" />
+    <Compile Include="NamespaceDeclarationBuilder.fs" />
+    <Compile Include="CompilationUnitDeclarationBuilder.fs" />
+    <Compile Include="CodeGenerator.fs" />
+    <None Include="paket.references" />
+    <None Include="paket.template" />
+    <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -84,11 +93,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <ProjectReference Include="..\..\src\CSharp.UnionTypes\CSharp.UnionTypes.fsproj">
-      <Name>CSharp.UnionTypes</Name>
-      <Project>{badd2e7c-35a6-413b-a4c8-f291a8ffcb94}</Project>
-      <Private>True</Private>
-    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3')">
@@ -1447,11 +1451,4 @@
       </ItemGroup>
     </When>
   </Choose>
-  <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\packages\test\NUnit\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-      <Paket>True</Paket>
-    </Reference>
-  </ItemGroup>
 </Project>
